--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+/.internal
+/build
+.externalToolBuilders
+.DS_Store
+Thumbs.db
+.lock-wscript
+*.pyc
+.project
+.cproject
+builtins
+
 # Compiled Lua sources
 luac.out
 
